final.output
Grammar

    0 $accept: program $end

    1 program: script_instructions

    2 script_instructions: instruction
    3                    | instruction script_instructions

    4 instruction: ID ASSIGNOP WEBOBJECT
    5            | ID FUNC1GETHTML
    6            | ID FUNC2FINDWEBIMAGES
    7            | ID FUNC3ORGANIZEWEBINFO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGNOP (258) 4
    ID <id> (259) 4 5 6 7
    WEBOBJECT <val> (260) 4
    FUNC1GETHTML <val> (261) 5
    FUNC2FINDWEBIMAGES <val> (262) 6
    FUNC3ORGANIZEWEBINFO <val> (263) 7


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    program (10)
        on left: 1
        on right: 0
    script_instructions (11)
        on left: 2 3
        on right: 1 3
    instruction (12)
        on left: 4 5 6 7
        on right: 2 3


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program              go to state 2
    script_instructions  go to state 3
    instruction          go to state 4


State 1

    4 instruction: ID . ASSIGNOP WEBOBJECT
    5            | ID . FUNC1GETHTML
    6            | ID . FUNC2FINDWEBIMAGES
    7            | ID . FUNC3ORGANIZEWEBINFO

    ASSIGNOP              shift, and go to state 5
    FUNC1GETHTML          shift, and go to state 6
    FUNC2FINDWEBIMAGES    shift, and go to state 7
    FUNC3ORGANIZEWEBINFO  shift, and go to state 8


State 2

    0 $accept: program . $end

    $end  shift, and go to state 9


State 3

    1 program: script_instructions .

    $default  reduce using rule 1 (program)


State 4

    2 script_instructions: instruction .
    3                    | instruction . script_instructions

    ID  shift, and go to state 1

    $default  reduce using rule 2 (script_instructions)

    script_instructions  go to state 10
    instruction          go to state 4


State 5

    4 instruction: ID ASSIGNOP . WEBOBJECT

    WEBOBJECT  shift, and go to state 11


State 6

    5 instruction: ID FUNC1GETHTML .

    $default  reduce using rule 5 (instruction)


State 7

    6 instruction: ID FUNC2FINDWEBIMAGES .

    $default  reduce using rule 6 (instruction)


State 8

    7 instruction: ID FUNC3ORGANIZEWEBINFO .

    $default  reduce using rule 7 (instruction)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    3 script_instructions: instruction script_instructions .

    $default  reduce using rule 3 (script_instructions)


State 11

    4 instruction: ID ASSIGNOP WEBOBJECT .

    $default  reduce using rule 4 (instruction)
